test/tests/compiler/6_statements_and_conditional_expressions/valid/plx1_elif_ternary.plx
pub fn main(none) i32 {
    if 2 == 3 {
        return 1
    }
    elif ? 20 > 10 then 1 else 0 {
        return 0
    }
    else {
        return 2
    }
}
