test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/plx1_else_no_block_1.plx
pub fn main(none) i32 {
    if 0;
    elif 0 {
        return 1
    }
    else return 0
}
